--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,11 @@ packages = [{include = "dynaconf_test"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+dynaconf = "^3.1.12"
 
+
+[tool.poetry.scripts]
+dynaconf-test = "dynaconf_test.main:main"
 
 [build-system]
 requires = ["poetry-core"]
